--- a/food.html
+++ b/food.html
@@ -38,45 +38,69 @@
             </div>
         </header>
 
+
         <div class="top">
+            <!-- <input type="button" value=" + " id="add"> -->
+
             <div class="title">
                 <h2>Food <img src="img/good.png" width="50px"></h2>
-                <p>飲食店のお気に入りを全部まとめて</p>
+                <p>飲食店のお気に入り</p>
             </div>
         </div>
 
         <main>
-            <div class="memo">
-                <input type="text" id="text">
-                <textarea id="text_area"></textarea>
+            <div class="wrap">
+                <form class="f">
+                    <input type="text" class="input" id="inputform_0" placeholder="タイトル">
+                    <textarea class="del" id="text_area-"></textarea>
+                </form>
             </div>
-
-            <div class="memo">
-                <input type="text" id="text">
-                <textarea id="text_area"></textarea>
+            <div class="wrap">
+                <form class="f">
+                    <input type="text" class="input" id="inputform_1" placeholder="タイトル">
+                    <textarea class="del" id="text_area-1"></textarea>
+                </form>
             </div>
-
-            <div class="memo">
-                <input type="text" id="text">
-                <textarea id="text_area"></textarea>
+            <div class="wrap">
+                <form class="f">
+                    <input type="text" class="input" id="inputform_2" placeholder="タイトル">
+                    <textarea class="del" id="text_area-2"></textarea>
+                </form>
+            </div>
+            <div class="wrap">
+                <form class="f">
+                    <input type="text" class="input" id="inputform_3" placeholder="タイトル">
+                    <textarea class="del" id="text_area-3"></textarea>
+                </form>
             </div>
         </main>
         <main>
-            <div class="memo">
-                <input type="text" id="text">
-                <textarea id="text_area"></textarea>
+            <div class="wrap">
+                <form class="f">
+                    <input type="text" class="input" id="inputform_4" placeholder="タイトル">
+                    <textarea class="del" id="text_area-4"></textarea>
+                </form>
             </div>
-
-            <div class="memo">
-                <input type="text" id="text">
-                <textarea id="text_area"></textarea>
+            <div class="wrap">
+                <form class="f">
+                    <input type="text" class="input" id="inputform_5" placeholder="タイトル">
+                    <textarea class="del" id="text_area-5"></textarea>
+                </form>
             </div>
-
-            <div class="memo">
-                <input type="text" id="text">
-                <textarea id="text_area"></textarea>
+            <div class="wrap">
+                <form class="f">
+                    <input type="text" class="input" id="inputform_6" placeholder="タイトル">
+                    <textarea class="del" id="text_area-6"></textarea>
+                </form>
+            </div>
+            <div class="wrap">
+                <form class="f">
+                    <input type="text" class="input" id="inputform_7" placeholder="タイトル">
+                    <textarea class="del" id="text_area-7"></textarea>
+                </form>
             </div>
         </main>
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
