--- a/gs.html
+++ b/gs.html
@@ -43,8 +43,8 @@
             <!-- <input type="button" value=" + " id="add"> -->
 
             <div class="title">
-                <h2>Food <img src="img/good.png" width="50px"></h2>
-                <p>飲食店のお気に入り</p>
+                <h2>G's <img src="img/good.png" width="50px"></h2>
+                <p>プログラミングおすすめサイト</p>
             </div>
         </div>
 
