--- a/movie.html
+++ b/movie.html
@@ -43,60 +43,60 @@
             <!-- <input type="button" value=" + " id="add"> -->
 
             <div class="title">
-                <h2>Food <img src="img/good.png" width="50px"></h2>
-                <p>飲食店のお気に入り</p>
+                <h2>Movie <img src="img/good.png" width="50px"></h2>
+                <p>映画のお気に入り</p>
             </div>
         </div>
 
         <main>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_0" placeholder="タイトル">
-                    <textarea class="del" id="text_area-"></textarea>
+                    <input type="text" class="input" id="movieform_0" placeholder="タイトル">
+                    <textarea class="del" id="movie_area-"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_1" placeholder="タイトル">
-                    <textarea class="del" id="text_area-1"></textarea>
+                    <input type="text" class="input" id="movieform_1" placeholder="タイトル">
+                    <textarea class="del" id="movie_area-1"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_2" placeholder="タイトル">
-                    <textarea class="del" id="text_area-2"></textarea>
+                    <input type="text" class="input" id="movieform_2" placeholder="タイトル">
+                    <textarea class="del" id="movie_area-2"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_3" placeholder="タイトル">
-                    <textarea class="del" id="text_area-3"></textarea>
+                    <input type="text" class="input" id="movieform_3" placeholder="タイトル">
+                    <textarea class="del" id="movie_area-3"></textarea>
                 </form>
             </div>
         </main>
         <main>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_4" placeholder="タイトル">
-                    <textarea class="del" id="text_area-4"></textarea>
+                    <input type="text" class="input" id="movieform_4" placeholder="タイトル">
+                    <textarea class="del" id="movie_area-4"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_5" placeholder="タイトル">
-                    <textarea class="del" id="text_area-5"></textarea>
+                    <input type="text" class="input" id="movieform_5" placeholder="タイトル">
+                    <textarea class="del" id="movie_area-5"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_6" placeholder="タイトル">
-                    <textarea class="del" id="text_area-6"></textarea>
+                    <input type="text" class="input" id="movieform_6" placeholder="タイトル">
+                    <textarea class="del" id="movie_area-6"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_7" placeholder="タイトル">
-                    <textarea class="del" id="text_area-7"></textarea>
+                    <input type="text" class="input" id="movieform_7" placeholder="タイトル">
+                    <textarea class="del" id="movie_area-7"></textarea>
                 </form>
             </div>
         </main>
