--- a/book.html
+++ b/book.html
@@ -43,60 +43,60 @@
             <!-- <input type="button" value=" + " id="add"> -->
 
             <div class="title">
-                <h2>Food <img src="img/good.png" width="50px"></h2>
-                <p>飲食店のお気に入り</p>
+                <h2>Book <img src="img/good.png" width="50px"></h2>
+                <p>本のお気に入り</p>
             </div>
         </div>
 
         <main>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_0" placeholder="タイトル">
-                    <textarea class="del" id="text_area-"></textarea>
+                    <input type="text" class="input" id="bookform_0" placeholder="タイトル">
+                    <textarea class="del" id="book_area-"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_1" placeholder="タイトル">
-                    <textarea class="del" id="text_area-1"></textarea>
+                    <input type="text" class="input" id="bookform_1" placeholder="タイトル">
+                    <textarea class="del" id="book_area-1"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_2" placeholder="タイトル">
-                    <textarea class="del" id="text_area-2"></textarea>
+                    <input type="text" class="input" id="bookform_2" placeholder="タイトル">
+                    <textarea class="del" id="book_area-2"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_3" placeholder="タイトル">
-                    <textarea class="del" id="text_area-3"></textarea>
+                    <input type="text" class="input" id="bookform_3" placeholder="タイトル">
+                    <textarea class="del" id="book_area-3"></textarea>
                 </form>
             </div>
         </main>
         <main>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_4" placeholder="タイトル">
-                    <textarea class="del" id="text_area-4"></textarea>
+                    <input type="text" class="input" id="bookform_4" placeholder="タイトル">
+                    <textarea class="del" id="book_area-4"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_5" placeholder="タイトル">
-                    <textarea class="del" id="text_area-5"></textarea>
+                    <input type="text" class="input" id="bookform_5" placeholder="タイトル">
+                    <textarea class="del" id="book_area-5"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_6" placeholder="タイトル">
-                    <textarea class="del" id="text_area-6"></textarea>
+                    <input type="text" class="input" id="bookform_6" placeholder="タイトル">
+                    <textarea class="del" id="book_area-6"></textarea>
                 </form>
             </div>
             <div class="wrap">
                 <form class="f">
-                    <input type="text" class="input" id="inputform_7" placeholder="タイトル">
-                    <textarea class="del" id="text_area-7"></textarea>
+                    <input type="text" class="input" id="bookform_7" placeholder="タイトル">
+                    <textarea class="del" id="book_area-7"></textarea>
                 </form>
             </div>
         </main>
