--- a/food.html
+++ b/food.html
@@ -46,6 +46,11 @@
                 <h2>Food <img src="img/good.png" width="50px"></h2>
                 <p>飲食店のお気に入り</p>
             </div>
+            <div class="line-it-button" data-lang="ja" data-type="share-b" data-ver="3"
+                data-url="https://shun0305.github.io/03_07_HiRECO/food.html" data-color="grey" data-size="small"
+                data-count="false" style="display: none;"></div>
+            <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async"
+                defer="defer"></script>
         </div>
 
         <main>
